# app/routers/router.go
@@ -16,7 +16,7 @@ import (
 	_ "app/docs" // docs is generated by Swag CLI, you have to import it.
 )
 
-func CreateRouter(productsV1 *handlers.Products) chi.Router {
+func CreateRouter(productsV1 *handlers.Products, auth func(http.Handler) http.Handler) chi.Router {
 	r := chi.NewMux()
 
 	r.Use(middleware.RequestID)
@@ -26,14 +26,14 @@ func CreateRouter(productsV1 *handlers.Products) chi.Router {
 
 	r.Route("/v1", func(r chi.Router) {
 		r.Route("/product", func(r chi.Router) {
-			r.Post("/", productsV1.Create)
+			r.With(auth).Post("/", productsV1.Create)
 			r.Get("/list", productsV1.List)
 
 			r.Route("/{productID}", func(r chi.Router) {
 				r.Use(productsV1.ParseProductID)
 				r.Get("/", productsV1.Get)
-				r.Put("/", productsV1.Update)
-				r.Delete("/", productsV1.Delete)
+				r.With(auth).Put("/", productsV1.Update)
+				r.With(auth).Delete("/", productsV1.Delete)
 			})
 		})
 	})
